# object-colors

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  Pipfile  README.md  README.rst  color_class.py  conftest.py  genindex.html  index.html  object_colors.html  object_colors.py  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.py  test.py  whitelist.py
.github/workflows/: build.yaml  build.yml  ci.yml  codeql-analysis.yml
_modules/: index.html  object_colors.html
_sources/: index.rst.txt  object_colors.rst.txt
docs/: README.rst  conf.py  index.rst  make.bat  object_colors.rst  readme_include.rst
docs/source/: README.rst  conf.py  index.rst  object_colors.rst
docs/source/_templates/: globaltoc.html
object_colors/: __init__.py  _version.py  color_class.py
tests/: TESTS.md  __init__.py  _test.py  color_test.py  conftest.py  get_key_test.py  get_test.py  ignore_case_and_scatter_test.py  ignore_case_test.py  masterclass_test.py  multicolor_test.py  no_args_test.py  pop_test.py  populate_colors_test.py  print_key_test.py  print_test.py  scatter_test.py  space_searches_test.py  subclass_test.py  test.py  test_both_test.py
tests/get_key_tests.py/: ignore_case_and_scatter_test.py  ignore_case_test.py  multiple_args_ignore_case.py  no_args_color_test.py  no_args_no_color_test.py  scatter_test.py
tests/get_key_tests.py/color/: ignore_case_and_scatter_color_test.py  ignore_case_color_test.py  multiple_args_ignore_color_case_color_test.py  no_args_color_test.py  scatter_color_test.py  space_searches_color_test.py
tests/get_key_tests.py/no_color/: ignore_case_and_scatter_no_color_test.py  ignore_case_no_color_test.py  multiple_args_ignore_case_no_color_test.py  no_args_no_color_test.py  scatter_no_color_test.py  space_searches_no_color_test.py
