[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = ["whitelist.py", "object_colors/__main__.py"]

[tool.poetry]
authors = ["jshwi <stephen@jshwisolutions.com>"]
description = "Adding colours to Python simplified into a single class"
license = "MIT"
name = "object-colors"
version = "2.0.1"
readme = "README.rst"

[tool.poetry.dependencies]
colorama = "^0.4.4"
python = "^3.8"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
ipython = "^8.1.0"
pyaud = "^3.8.0"
pytest = "^6.2.5"
restview = "^3.0.0"
toml-sort = "^0.19.0"

[tool.pytest.ini_options]
addopts = [
    "--durations=5",
    "-vv",
    "--color=yes",
    "--cov-report",
    "term-missing",
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = ["docs", "*.egg-info", ".git", ".mypy_cache", ".idea", "prof"]
