[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = ["whitelist.py", "object_colors/__main__.py"]

[tool.poetry]
authors = ["jshwi <stephen@jshwisolutions.com>"]
description = "Adding colours to Python simplified into a single class"
license = "MIT"
name = "object-colors"
readme = "README.rst"
version = "2.0.1"

[tool.poetry.dependencies]
colorama = "^0.4.4"
python = "^3.8"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
ipython = "^7.19.0"
prompt-toolkit = "^3.0.13"
pyaud = "^3.13.5"
pytest = "^6.2.1"
restview = "^2.9.2"

[tool.pytest.ini_options]
addopts = [
    "--durations=5",
    "-vv",
    "--color=yes",
    "--cov-report",
    "term-missing",
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = ["docs", "*.egg-info", ".git", ".mypy_cache", ".idea", "prof"]
